provarAnt/00D190000000ZY2EAM/objects/FulfillmentSnapshotActivities__c.object
<CustomObject>
    <description>Note: This is a Detail in a Master Detail relationship to Fulfillment Snapshot Summary.  In Software Org, this data is pulled from the Activities object.</description>
    <fields>
        <fullName>ActivitySubject__c</fullName>
        <label>Activity Subject</label>
        <picklist>
            <picklistValues>
                <fullName>ACH Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collect Money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoming Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Store Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Store Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Introduction Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Training Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outgoing Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set up Packet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebEx Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-Up Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Follow-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New User Session 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Review Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photo/Syndication Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Session 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>custom field to capture HYMedia Activity Comments</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Snapshot_Name__c</fullName>
        <label>Haystak QuickView Name</label>
        <referenceTo>FulfillmentSnapshotSummary__c</referenceTo>
        <relationshipLabel>Haystak QuickView Activities</relationshipLabel>
        <relationshipName>Fulfillment_Snapshot_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Snapshot_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Haystak QuickView POA</label>
        <referenceTo>FulfillmentSnapshotPOA__c</referenceTo>
        <relationshipLabel>Plan of Action (POA)</relationshipLabel>
        <relationshipName>Fulfillment_Snapshot_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <label>Haystak QuickView Activities</label>
    <nameField>
        <label>Haystak QuickView Activities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Haystak QuickView Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>